--- a/poo.html
+++ b/poo.html
@@ -100,38 +100,23 @@
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/g4DSfdpz0d4"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"><b> Notas Finais</b></a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula8 - ResumoDiagramas.pdf"> Aula 8 - Resumo dos Diagramas UML</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula9 - Arquitetura de SW.pptx"> Aula 9 - Arquitetura de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula10- SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - ArgoUML_casos.pdf"> Aula 11 - ArgoUML: Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula11- ArgoUML_classes.pdf"> Aula 11 - ArgoUML: Diagrama de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula12 - Conceitos de POO.pdf"> Aula 12 - Conceitos de POO</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula13 - Classes E Relacionamentos.pdf"> Aula 13 - Classes e Relacionamentos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula14 - Membros de Classes.pdf"> Aula 14 - Membros de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula15 - Idiomas de Programacao.pdf"> Aula 15 - Idiomas de Programação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/Aula16 - Componentes_Implantacao.pdf"> Aula 16 - Diagrama de Componentes e Implantação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Trabalho Final</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"><b> Notas Finais</b></a></button>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Trabalho Final</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/P3-Voos.pdf"> Projeto 3: Sistema de Voos</a></li>
