--- a/poo-python.html
+++ b/poo-python.html
@@ -75,13 +75,13 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<!--<div>
+					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/backes/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2024.1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/backes/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>-->
+					</div>
 					<div>
 					<b>Avaliação:</b>
 					<ul>
@@ -97,7 +97,7 @@
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAComputacao.pptx"> Aula 01 - Introdução à Computação</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAoPython.ppt"> Aula 01 - Introdução ao Python</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-AlgoritmosFluxogramas.pptx"> Aula 02 - Algoritmos e Fluxogramas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-VariaveisExpressoes.pptx"> Aula 03 - Variáveis e Expressões</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Condicional.pptx"> Aula 04 - Comandos Condicionais</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
@@ -107,8 +107,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Funcoes.pptx"> Aula 08 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pptx"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pptx"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)--></li>	
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 11 - Herança </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 12 - Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
 						</ul>
 					</div> 
 					<!--<div>
