--- a/material.html
+++ b/material.html
@@ -80,7 +80,7 @@
 						<ul>
 						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software I <b>(Terça e Quarta: 08h50 - 10h30)</b></i></a></li> 
 						<li><a href="poo-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 <b>(Terça: 13h00 - 14h40)</b></i></a></li>
-						<!--<li><a href="poo-virtual.html"><i class="icon-home"></i><i> Programação de Computadores 2 (Teoria) <b>(Regime Especial - Online)</b></i></a></li>-->
+						<li><a href="poo.html"><i class="icon-home"></i><i> Programação de Computadores 2 (Teoria) <b>(Java)</b></i></a></li>
 						<li><a href="gsi526-lab.html"><i class="icon-home"></i><i> Engenharia de Software I Lab. <b>(Terça: 10h40 - 12h30)</b></i></a></li> 
 						<li><a href="poo-lab-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 Lab. <b>(Sexta: 13h00 - 16h30)</b></i></a></li>
 						<!-- <li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50 - 16h50 / Quarta: 13h10 - 14h50)</b></i></a></li>
