--- a/poo-python.html
+++ b/poo-python.html
@@ -98,7 +98,7 @@
 					<div>
 						<ul>	
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAoPython.ppt"> Aula 01 - Introdução ao Python</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-AlgoritmosFluxogramas.pptx"> Aula 02 - Algoritmos e Fluxogramas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-AlgoritmosFluxogramas.pptx"> Aula 02 - Algoritmos e Fluxogramas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-VariaveisExpressoes.pptx"> Aula 03 - Variáveis e Expressões</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Condicional.pptx"> Aula 04 - Comandos Condicionais</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython05-Repeticao.pptx"> Aula 05 - Comandos de Repetição</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
