--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -103,7 +103,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(19/07)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(23/08)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 2 - 30 pts <b>(23/08)</b> <a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li>Trabalho 3 - 30 pts <b>(13/09)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<li>Exercícios Práticos - 10 pts <b>(06/09)</b> <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
